[gd_scene load_steps=5 format=3 uid="uid://bdifvk6ohbf1k"]

[ext_resource type="Script" uid="uid://28hwanwfoglj" path="res://scenes/combat/combat_scene.gd" id="1_jecyb"]
[ext_resource type="PackedScene" uid="uid://o4im1182wkw1" path="res://scenes/ui/action_panel.tscn" id="2_7cuye"]
[ext_resource type="AudioStream" uid="uid://cmuacihyaxrmi" path="res://assets/sword-slash-and-swing-185432.mp3" id="3_3cl4e"]
[ext_resource type="AudioStream" uid="uid://bkbcnjhanfvgq" path="res://assets/item-swing-sfx-3-409079.mp3" id="4_kltxb"]

[node name="CombatScene" type="Node2D"]
script = ExtResource("1_jecyb")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 760.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.23921569, 0.15686275, 0.09019608, 1)

[node name="Fighters" type="Node2D" parent="."]

[node name="PlayerPosition" type="Node2D" parent="Fighters"]
position = Vector2(300, 400)

[node name="Sprite" type="ColorRect" parent="Fighters/PlayerPosition"]
offset_left = -50.0
offset_top = -75.0
offset_right = 50.0
offset_bottom = 75.0
color = Color(0.20392157, 0.59607846, 0.85882354, 1)

[node name="NameLabel" type="Label" parent="Fighters/PlayerPosition/Sprite"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 59.0
offset_bottom = 33.0
text = "Player"

[node name="StatsUI" type="CanvasLayer" parent="Fighters/PlayerPosition"]
offset = Vector2(200, 400)
transform = Transform2D(1, 0, 0, 1, 200, 400)

[node name="StatsPanel" type="VBoxContainer" parent="Fighters/PlayerPosition/StatsUI"]
custom_minimum_size = Vector2(200, 0)
offset_left = 20.0
offset_top = -200.0
offset_right = 60.0
offset_bottom = -160.0

[node name="HealthBar" type="ProgressBar" parent="Fighters/PlayerPosition/StatsUI/StatsPanel"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="CPLabel" type="Label" parent="Fighters/PlayerPosition/StatsUI/StatsPanel"]
layout_mode = 2
text = "CP: 10/10"

[node name="WoundLabel" type="Label" parent="Fighters/PlayerPosition/StatsUI/StatsPanel"]
layout_mode = 2
text = "Wounds: 0"

[node name="EnemyPosition" type="Node2D" parent="Fighters"]
position = Vector2(1600, 400)

[node name="Sprite" type="ColorRect" parent="Fighters/EnemyPosition"]
offset_left = -50.0
offset_top = -75.0
offset_right = 50.0
offset_bottom = 75.0
color = Color(0.90588236, 0.29803923, 0.23529412, 1)

[node name="NameLabel" type="Label" parent="Fighters/EnemyPosition/Sprite"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 72.0
offset_bottom = 33.0
text = "Enemgy"

[node name="StatsUI" type="CanvasLayer" parent="Fighters/EnemyPosition"]
offset = Vector2(1500, 400)
transform = Transform2D(1, 0, 0, 1, 1500, 400)

[node name="StatsPanel" type="VBoxContainer" parent="Fighters/EnemyPosition/StatsUI"]
custom_minimum_size = Vector2(200, 0)
offset_left = 20.0
offset_top = -200.0
offset_right = 60.0
offset_bottom = -119.0

[node name="HealthBar" type="ProgressBar" parent="Fighters/EnemyPosition/StatsUI/StatsPanel"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="CPLabel" type="Label" parent="Fighters/EnemyPosition/StatsUI/StatsPanel"]
layout_mode = 2
text = "CP: 10/10"

[node name="WoundLabel" type="Label" parent="Fighters/EnemyPosition/StatsUI/StatsPanel"]
layout_mode = 2
text = "Wounds: 0"

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopPanel" type="PanelContainer" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_right = 768.0
offset_bottom = 80.0
grow_horizontal = 2

[node name="InfoContainer" type="HBoxContainer" parent="UI/HUD/TopPanel"]
layout_mode = 2

[node name="RoundLabel" type="Label" parent="UI/HUD/TopPanel/InfoContainer"]
custom_minimum_size = Vector2(400, 16)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Round1|Exchange1"

[node name="LogPanel" type="PanelContainer" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -200.0
offset_right = 768.0
grow_horizontal = 2
grow_vertical = 0

[node name="LogScroll" type="ScrollContainer" parent="UI/HUD/LogPanel"]
layout_mode = 2

[node name="LogText" type="RichTextLabel" parent="UI/HUD/LogPanel/LogScroll"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
fit_content = true
scroll_following = true
scroll_following_visible_characters = true

[node name="ActionPanel" parent="UI" instance=ExtResource("2_7cuye")]
z_index = 10
size_flags_horizontal = 4

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_3cl4e")

[node name="MissSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_kltxb")
